@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4EnergyLossTables.cc,v 1.12 2000-05-23 14:25:26 urban Exp $
+// $Id: G4EnergyLossTables.cc,v 1.13 2000-11-04 16:47:29 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ------------------------------------------------------------------- 
@@ -61,7 +61,7 @@ void G4EnergyLossTables::Register(
  G4double G4EnergyLossTables::GetPreciseDEDX(
     const G4ParticleDefinition *aParticle,
     G4double KineticEnergy,
-    G4Material *aMaterial)
+    const G4Material *aMaterial)
 {
   if( aParticle != lastParticle)
   {
@@ -104,7 +104,7 @@ void G4EnergyLossTables::Register(
  G4double G4EnergyLossTables::GetPreciseRangeFromEnergy(
     const G4ParticleDefinition *aParticle,
     G4double KineticEnergy,
-    G4Material *aMaterial)
+    const G4Material *aMaterial)
 {
   if( aParticle != lastParticle)
   {
